--- a/随便记记.org
+++ b/随便记记.org
@@ -9,7 +9,7 @@
    
    http://twister.net.co/
 ** just proxy (chrome plugin)
-** http://goo.gl/0qEKSs
+   http://goo.gl/0qEKSs
 ** http://www.dou-bi.com/
 ** http://fanqianghou.com/
    or
@@ -23,10 +23,17 @@
 * 书
 ** 
    [[http://www.tingyun.com/][听云]]
+
    [[http://mycat.io/][mycat分布式mysql中间件]]
+
    [[https://xiaolan.me/obfsproxy.html][使用obfsproxy混淆任意流量]]
 * uml
   https://draw.io
+
   https://www.websequencediagrams.com/
+
   http://yuml.me/
+
   http://uml.riaoo.com/
+* emacs
+  [[https://github.com/search?utf8=%E2%9C%93&q=emacs-starter-kit][emacs-starter-kit]]
