--- a/随便记记.org
+++ b/随便记记.org
@@ -20,6 +20,12 @@
    *MurmurHash* 是一种非加密型哈希函数，适用于一般的哈希检索操作。由Austin Appleby在2008年发明，并出现了多个变种，都已经发布到了公有领域(public domain)。与其它流行的哈希函数相比，对于规律性较强的key，MurmurHash的随机分布特征表现更良好。
    *Merkle Damgard*
 ** p2p
+** 药
+*** 广东凉茶
+    配料：葡萄糖、鲜芦根、夏枯草、布渣叶、鸡蛋花、仙草、菊花。
+*** 通窍鼻炎颗粒
+    + 成分：苍耳子（炒）、防风、黄芪、白芷、辛夷、白术（炒）、薄荷。
+    + 功能主治：散风消炎，宣通鼻窍。用于鼻渊，鼻塞，流涕，前额头痛；鼻炎，鼻窦炎及过敏性鼻炎。
 * 书
 ** 
    [[http://www.tingyun.com/][听云]]
