--- a/随便记记.org
+++ b/随便记记.org
@@ -18,6 +18,7 @@
 * 不知道的东西
 ** hash
    *MurmurHash* 是一种非加密型哈希函数，适用于一般的哈希检索操作。由Austin Appleby在2008年发明，并出现了多个变种，都已经发布到了公有领域(public domain)。与其它流行的哈希函数相比，对于规律性较强的key，MurmurHash的随机分布特征表现更良好。
+
    *Merkle Damgard*
 ** p2p
 * 书
@@ -37,3 +38,10 @@
   http://uml.riaoo.com/
 * emacs
   [[https://github.com/search?utf8=%E2%9C%93&q=emacs-starter-kit][emacs-starter-kit]]
+* [[http://blog.sina.com.cn/s/blog_676fb9380100rtqs.html][Web上的linux：用javascript实现虚拟机]]
+* 可能和词语来源相关的东东
+** 精气神
+   《三命通会》
+   或以三合者，如人一身之运用也。 _精乃天之元，气乃神之本，是以精为气之母，神为气之子，子母相生，精气神全而不散之为合_ 。盖谓支属人元，故以此论之。如申子辰，申乃子之母，辰乃子之子，申乃水生，子乃水旺。辰乃水气，生即产， 旺即成，库即收，有生有成有收，万物得始得终，乃自然之理，故申子辰为水局。若三字缺一则化不成局，不可以三合化局论。盖天地间道理，两则化，一阴一阳之谓也，三则化，三生万物之谓也。巳酉丑、寅午戌、亥卯未皆然。五行不言土者，四行皆赖土成局，万物皆归藏於土故也；若辰戌丑未全自作土局论。
+   凡命有合，要得局为佳。假令丙丁生人见亥卯未印、巳酉丑财为得局，见寅午戌火为本局，申子辰水为官局，辰戌丑未土
+   为伤局。又如丙人见巳酉丑，丁人见寅午戌为三位禄格，谓丙以已为禄，丁以午为禄，酉丑合已，寅戌合午故也。︽珞录子︾云：“禄有三会”。 《壶中子》云：“得一分三，折月中之仙桂”。此之谓也。馀仿此例。
