--- a/随便记记.org
+++ b/随便记记.org
@@ -16,7 +16,28 @@
    or
    https://s3.amazonaws.com/fanqianghou/index.html
 
+* 六爻相关
+** [[http://www.360doc.com/content/15/0620/23/25024905_479486344.shtml][六十四卦世应六亲简单记忆法]]
+   第一首先记口诀：
+
+   天同二世天变五，地同四世地变初，人同游魂（四爻）人变归（三爻）。
+
+   一二三六外卦宫，四五游魂内变更，归魂内卦是本宫。
+
+   讲解：六十四卦有外卦与内卦，外卦与内卦都有天爻，地爻，人爻。天同（天爻同其它两爻不同）二爻是世爻；天变（天爻不同其它两爻同）五爻是世爻；地同（地爻同其它两爻不同）四爻是世爻；地变（地爻不同其它两爻同）初爻是世爻；人同（人爻同其它两爻不同）是游魂卦，世爻在四爻；人变（人爻不同其它两爻同）是归魂卦，世爻在三爻。
+
+   下边这个口诀说的就是按六亲，但是首先得找出兄弟爻，一二三六（世爻在一二三六爻的）外卦的五行就是兄弟（如乾卦金爻就是兄弟）；四五和游魂卦内卦的变爻就是兄弟爻（如内卦是乾卦，乾卦三爻全变就是坤卦）；归魂卦的内卦就是兄弟爻（如内卦是乾卦，金爻就是兄弟爻）。
+
+   第二给六十四卦按地支：
+
+   得记住：首先是阳卦，乾（父亲）和震（老大）的内外卦一样，从下向上为（都是阳地支）：子水；寅木；辰土；（内卦）午火；申金；戌土（外卦）。坎（老二）的内外卦，从下向上为：寅木；辰土；午火（内卦）；申金；戌土；子水（外卦）。艮（老三）的内外卦为：辰土；午火；申金（内卦）；戌土；子水；寅木（外卦）。
+
+   上头我说的都是阳卦，地支要用阳地支子，寅，辰，午，申，戌。子（子为阳爻第一爻）开头放到乾（父亲）和震（老大）的初爻，其次再二爻寅，三爻辰依次为四午五申六戌爻；寅（阳爻第二爻）放到坎（老二）的初爻，依次论推；辰（阳爻第三爻）放到艮（老三）的初爻，依次论推。
+
+   其次是阴卦，按阴地支逆数，丑，亥，酉，未，巳，卯。巽大女儿，第一爻丑爻，二爻亥，三爻酉，四爻未，五爻巳，上爻卯。其次离二女儿，第一爻卯，依次是丑，亥，酉，未，巳。其次是兑三女儿，第一爻是巳，依次是卯，丑，亥，酉，未。其次是坤母亲，第一爻是未，依次是巳，卯，丑，亥，酉，未。你记住它们的第一爻从大女儿，二女儿，三女儿，母亲分别是，丑，卯，巳，未，有第一爻其它爻从下向上逆数，我一直这样用，也很好用，现在奉献给大家，希望对大家有点用。
+
 * 不知道的东西
+** webm,vp8
 ** AA|BB|CC|DD|DD|EE|FF 要替换第5个|后边的内容 sed 's/[^|]\+/YY/5'
 
    [[http://zhidao.baidu.com/link?url=nXsZA29OwN0-OHVPTqpeQEjDQYuabbg-pFbgT8GfY_5_yBq4IGcgh7MvzKxtzjUJjHQSbkMmebh4LWlfms4Faq][baidu]]
@@ -88,6 +109,20 @@
    Your package hosting and download center infrastructure for automated software distribution
 
    [[http://rime.im/][rime输入法]]
+
+   [[http://www.webhek.com/pathfinding][动画展示计算机迷宫路径各种搜索算法]]
+
+   [[http://www.oschina.net/translate/what-every-web-developer-must-know-about-url-encoding][每个 Web 开发者都应该知道的关于 URL 编码的知识]]
+
+   [[http://gomockingbird.com/][Mockingbird 在线的原型设计工具]]
+
+   [[http://www.tutorialspoint.com/][一个学东西的网址]]
+
+* html5
+ 
+  http://www.webhek.com/
+
+  http://www.htmlfivecan.com/
 * uml
   https://draw.io
 
