--- a/随便记记.org
+++ b/随便记记.org
@@ -17,6 +17,7 @@
 ** http://fanqianghou.com/
    or
    https://s3.amazonaws.com/fanqianghou/index.html
+** aixyz
 
 * 六爻相关
 ** [[http://www.360doc.com/content/15/0620/23/25024905_479486344.shtml][六十四卦世应六亲简单记忆法]]
@@ -98,6 +99,7 @@
   更有戊癸何方觅，甲寅之上好追求。——逢年干是戊或癸的年份，正月的月干从甲上起。
 * 干支纪月是干支历的一部分，主要用于风水、术数等领域中，这使得干支历一直在官方和民间都流行不衰。而事实上”正月建寅”是与北斗七星在地球上所观察的周年运动有关，与地球环绕太阳一周期的时间相同
 * 
+   [[https://www.zoomeye.org/][ZoomEye | 钟馗之眼 - 网络空间搜索引擎]]
    [[http://www.tingyun.com/][听云]]
 
    [[https://1024tools.com/][1024程序员开发工具箱 1024tools.com]]
