方程名字的出处

--- a/随便记记.org
+++ b/随便记记.org
@@ -179,6 +179,8 @@
 ***  匹配网址的正则http://\S-+ 减号 加号什么意思
 * [[http://blog.sina.com.cn/s/blog_676fb9380100rtqs.html][Web上的linux：用javascript实现虚拟机]]
 * 可能和词语来源相关的东东
+** 方程
+中国古代代数学泰斗刘徽称一类问题是“群物总杂，各列有数，总言其实”，处理方式是 “令每行为率，二物者再程，三物者三程，皆如物数程之。并列为行，故谓之方程。” 就是说，将这些数按类一行一行的列出来，有几个未知数就排列上几行，各行称之为率，可以按比例扩大或缩小，刘徽把这样的数字方阵称为“方程”。
 ** 精气神
    《三命通会》
    或以三合者，如人一身之运用也。 _精乃天之元，气乃神之本，是以精为气之母，神为气之子，子母相生，精气神全而不散之为合_ 。盖谓支属人元，故以此论之。如申子辰，申乃子之母，辰乃子之子，申乃水生，子乃水旺。辰乃水气，生即产， 旺即成，库即收，有生有成有收，万物得始得终，乃自然之理，故申子辰为水局。若三字缺一则化不成局，不可以三合化局论。盖天地间道理，两则化，一阴一阳之谓也，三则化，三生万物之谓也。巳酉丑、寅午戌、亥卯未皆然。五行不言土者，四行皆赖土成局，万物皆归藏於土故也；若辰戌丑未全自作土局论。
