--- a/随便记记.org
+++ b/随便记记.org
@@ -201,6 +201,9 @@
   * 类库适配
 * [[http://www.cnki.net/][中国知网]]
 * [[https://frontendmasters.com/][国外的一个前端教程网站]]
+* js
+  [[http://ramda.cn/][Ramda 中文]] 一款实用的 JavaScript 函数式编程库。
+  [[https://cn.vuejs.org/][Vue.js]] 渐进式JavaScript 框架
 * java
   java enum 构造方法只能private?
   [[http://jzhihui.iteye.com/blog/1271122][影响java创建线程数量的设置]]
