--- a/随便记记.org
+++ b/随便记记.org
@@ -235,7 +235,7 @@
   Dynamic Proxy 的一个作用是阻止类型转换[[https://www.ibm.com/developerworks/library/j-jtp08305/index.html][The dynamic proxy mechanism]]
 * 做个指纹密码管理app
 
-
+#+begin_verse
 █████████████████████████████████
 █████████████████████████████████
 ████ ▄▄▄▄▄ █ █▀█  ▀▄██ ▄▄▄▄▄ ████
@@ -253,3 +253,4 @@
 ████▄▄▄▄▄▄▄█▄▄▄▄███▄█▄██▄▄█▄▄████
 █████████████████████████████████
 █████████████████████████████████
+#+end_verse
