--- a/随便记记.org
+++ b/随便记记.org
@@ -151,6 +151,8 @@
    
    [[http://octave-online.net/][推举一个在线matlab(octave)]]
 
+   [[https://cntnr.io/building-a-0-docker-swarm-in-seconds-80bf13a4d0a7][Building a $0 Docker Swarm in seconds]]
+
    [[https://love2.io/][电子书]]
    Love2.io 是一个全新的开源技术文档分享平台，我们致力于提供用户更优雅的阅读和写作体验。技术改变世界，用文档传播。
 
